Add action to form

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
       <hr class="line-separator">
 
       <!-- Input -->
-      <form action="">
+      <form action="#">
         <input class="new-task" type="text" placeholder="Add to your list..." required>
         <i class="fa-solid fa-right-from-bracket icon"> </i>
       </form>
